// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`risingEdge instruction compiler > compiles the rising edge segment 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    33,
    1,
    32,
    1,
    63,
    0,
    65,
    1,
    107,
    65,
    16,
    116,
    65,
    252,
    255,
    3,
    106,
    77,
    4,
    127,
    32,
    1,
    40,
    2,
    0,
    5,
    65,
    0,
    11,
    74,
    4,
    127,
    65,
    1,
    5,
    65,
    0,
    11,
    65,
    0,
    32,
    0,
    33,
    3,
    33,
    2,
    32,
    2,
    63,
    0,
    65,
    1,
    107,
    65,
    16,
    116,
    65,
    252,
    255,
    3,
    106,
    77,
    4,
    64,
    32,
    2,
    32,
    3,
    54,
    2,
    0,
    5,
    11,
  ],
  "locals": {
    "__memoryGuardAddr_13": {
      "index": 2,
      "isInteger": true,
    },
    "__memoryGuardAddr_4": {
      "index": 1,
      "isInteger": true,
    },
    "__memoryGuardValue_13": {
      "index": 3,
      "isInteger": true,
    },
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": true,
    },
  },
  "memory": {},
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
      "knownIntegerValue": 0,
    },
  ],
}
`;

exports[`risingEdge instruction compiler > compiles the rising edge segment for float operands 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    65,
    0,
    33,
    1,
    32,
    1,
    63,
    0,
    65,
    1,
    107,
    65,
    16,
    116,
    65,
    252,
    255,
    3,
    106,
    77,
    4,
    125,
    32,
    1,
    42,
    2,
    0,
    5,
    67,
    0,
    0,
    0,
    0,
    11,
    94,
    4,
    127,
    65,
    1,
    5,
    65,
    0,
    11,
    65,
    0,
    32,
    0,
    33,
    3,
    33,
    2,
    32,
    2,
    63,
    0,
    65,
    1,
    107,
    65,
    16,
    116,
    65,
    252,
    255,
    3,
    106,
    77,
    4,
    64,
    32,
    2,
    32,
    3,
    56,
    2,
    0,
    5,
    11,
  ],
  "locals": {
    "__memoryGuardAddr_13": {
      "index": 2,
      "isInteger": true,
    },
    "__memoryGuardAddr_4": {
      "index": 1,
      "isInteger": true,
    },
    "__memoryGuardValue_13": {
      "index": 3,
      "isInteger": false,
    },
    "__risingEdgeDetector_currentValue4": {
      "index": 0,
      "isInteger": false,
    },
  },
  "memory": {},
  "stack": [
    {
      "isInteger": true,
      "isNonZero": false,
      "knownIntegerValue": 0,
    },
  ],
}
`;
